<resources>
    <string name="app_name">Chennai Times</string>
    <string name="app_name_tamil">சென்னை டைம்ஸ்</string>
    <string name="action_settings">Settings</string>
    <string name="content_authority">com.viginfotech.chennaitimes.app</string>


   <!-- <string name="invite">Send invitations!</string>
    <string name="welcome">App Invite\nQuickstart</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends_title">Invite Friends</string>
-->
    <string name="invitation_title">Chennai Times Tamil News</string>
    <string name="invitation_deep_link">https://play.google.com/store/apps/details?id=com.androidnanban.chennaitimes</string>
    <string name="invitation_cta">Install!</string>
    <string name="invitation_subject">Try this great app!</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>

    <!--
        <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
        <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>


        <string name="invite_dialog_title">You got an invitation!</string>

        <string name="google_play_services_error">Google Play Services Error</string>
        <string name="custom_invite">Custom Invite</string>
        -->

    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

    </string>

    <string name="title_activity_detail">Detail</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="dinamalar">தினமலர்</string>
    <string name="dinakaran">தினகரன்</string>
    <string name="bbctamil">பிபிசி தமிழ்</string>
    <string name="dinamani">தினமணி</string>
    <string name="oneindia">ஒன்இந்தியா</string>
    <string name="nakkheeran">நக்கீரன்</string>

    <string name="dinamalar_text">Dinamalar</string>
    <string name="dinakaran_text">Dinakaran</string>
    <string name="bbctamil_text">BBC Tamil</string>
    <string name="dinamani_text">Dinamani</string>
    <string name="oneindia_text">OneIndia</string>
    <string name="nakkheeran_text">Nakkheeran</string>

    <string name="action_headlines">முதல் பக்கம்</string>
    <string name="action_tamilnadu">தமிழ்நாடு   </string>
    <string name="action_india">இந்தியா</string>
    <string name="action_world">உலகம்</string>
    <string name="action_business">வர்த்தகம் </string>
    <string name="action_sports">விளையாட்டு</string>
    <string name="action_cinema">சினிமா</string>
    <string name="headlines_text">Headlines</string>
    <string name="tamilnadu_text">TamilNadu</string>
    <string name="india_text">India</string>
    <string name="world_text">World</string>
    <string name="business_text">Business</string>
    <string name="sports_text">Sports</string>
    <string name="cinema_text">Cinema</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="invite_friends"><![CDATA[நண்பர்களுடன் பகிருங்கள்]]></string>

    <string name="sync_account_type">viginfotech.com</string>
    <string name="send_intent_title">share_msg</string>
    <string name="invitation_message">"சென்னை டைம்ஸ் தமிழ் நியூஸ்" டவுன்லோட் செய்யுங்கள்</string>

    <string name="banner_ad_unit_id_dev">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_prod">ca-app-pub-9970722135669110/3878615783</string>
    <string name="native_ad_unit_id_dev">ca-app-pub-3940256099942544/1072772517</string>
    <string name="native_ad_unit_id_prod">ca-app-pub-2966464045026289/8022064054</string>
    <string name="retry_detail">Not Data Availabe. Retry later</string>


</resources>
